fix: Correction complète des erreurs de build et déploiement
- Suppression des imports ES6 problématiques (seo-config.js, performance-config.js, accessibility-config.js, config.js)
- Création d'app-config.js simple et fonctionnel
- Ajout de build.ps1 pour build PowerShell compatible
- Configuration Netlify optimisée avec commande PowerShell
- Correction de l'erreur terser en utilisant esbuild
- Scripts de build alternatifs (Node.js et PowerShell)
- Documentation de déploiement complète (Netlify et GitHub Pages)
- Build testé et fonctionnel - prêt pour déploiement

--- a/index.html
+++ b/index.html
@@ -1007,6 +1007,7 @@
     </div>
   </div>
 
+  <script src="app-config.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/navigation.js"></script>
   <script src="scripts/skills.js"></script>
