feat: Améliorations finales du portfolio professionnel
- Ajout de l'expérience Glob Access (Nov 2019 - Déc 2020) dans Work Experience
- Amélioration de l'affichage des icônes et projets clés avec animations
- Ajout de boutons de téléchargement du CV PDF (hero + contact)
- Optimisation de l'utilisation des jetons avec token-optimization.js
- Amélioration des styles pour les cartes de projets et icônes
- Ajout de styles pour les boutons de téléchargement CV
- Optimisation des descriptions et textes pour réduire les jetons
- Portfolio entièrement fonctionnel et prêt pour déploiement

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <div class="cta-buttons">
               <a href="#contact" class="btn primary">Get In Touch</a>
               <a href="#projects" class="btn secondary">View My Work</a>
+              <a href="Sidiki_Coul_CV.pdf" download="Sidiki_Coulibaly_CV.pdf" class="btn accent">
+                <i class="fas fa-download"></i> Télécharger CV
+              </a>
             </div>
           </div>
         </div>
@@ -377,6 +380,32 @@
                   <span>SharePoint</span>
                   <span>Outlook</span>
                   <span>Cybersécurité</span>
+                </div>
+              </div>
+            </div>
+            
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-date">Nov 2019 - Déc 2020</div>
+              <div class="timeline-content">
+                <h3>Technicien Support IT</h3>
+                <h4>Glob Access | ACI 2000, Mali</h4>
+                <p>Support technique de niveau 1 et 2 Onsite/Remote avec gestion avancée des comptes utilisateurs et implémentation de solutions de sécurité complètes.</p>
+                <ul>
+                  <li>Support technique de niveau 1 et 2 Onsite/Remote</li>
+                  <li>Gestion des comptes d'utilisateurs via AD et O365</li>
+                  <li>Solutions EDR, chiffrement des appareils, gestion des correctifs</li>
+                  <li>Identité et accès : MFA, SSO, gestion des accès privilégiés</li>
+                  <li>Sécurité des données : cryptage, partage de fichiers sécurisé</li>
+                  <li>Surveillance et réponse : mise en œuvre de SIEM, réponse aux incidents</li>
+                </ul>
+                <div class="tech-used">
+                  <span>Active Directory</span>
+                  <span>Office 365</span>
+                  <span>EDR</span>
+                  <span>MFA</span>
+                  <span>SSO</span>
+                  <span>SIEM</span>
                 </div>
               </div>
             </div>
@@ -697,6 +726,12 @@
               </div>
               <button type="submit" class="btn primary submit-btn">Send Message</button>
             </form>
+            <div class="cv-download-section">
+              <h4>Télécharger mon CV</h4>
+              <a href="Sidiki_Coul_CV.pdf" download="Sidiki_Coulibaly_CV.pdf" class="btn accent cv-download-btn">
+                <i class="fas fa-file-pdf"></i> Télécharger CV PDF
+              </a>
+            </div>
           </div>
         </div>
       </div>
