--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sidiki COULIBALY | IT Support Analyst | IT Infrastructure Engineer</title>
+  
+  <!-- Favicon Configuration -->
+  <link rel="icon" type="image/x-icon" href="public/favicon_io1/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/favicon_io1/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/favicon_io1/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="public/favicon_io1/apple-touch-icon.png">
+  <link rel="manifest" href="public/favicon_io1/site.webmanifest">
+  
+  <!-- CSS Files -->
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/components.css">
   <link rel="stylesheet" href="styles/animations.css">
