--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
               <div class="project-details">
                 <div class="detail-item">
                   <i class="fas fa-calendar"></i>
-                  <span>2024</span>
+                  <span>2025</span>
                 </div>
                 <div class="detail-item">
                   <i class="fas fa-tag"></i>
@@ -510,7 +510,7 @@
               <div class="project-details">
                 <div class="detail-item">
                   <i class="fas fa-calendar"></i>
-                  <span>2024</span>
+                  <span>2025</span>
                 </div>
                 <div class="detail-item">
                   <i class="fas fa-tag"></i>
@@ -537,7 +537,7 @@
               <div class="project-details">
                 <div class="detail-item">
                   <i class="fas fa-calendar"></i>
-                  <span>2024</span>
+                  <span>2025</span>
                 </div>
                 <div class="detail-item">
                   <i class="fas fa-tag"></i>
@@ -700,7 +700,7 @@
               </div>
               <div class="contact-item">
                 <i class="fas fa-phone"></i>
-                <span>+223 76 17 66 69 / +223 66 17 66 69</span>
+                <span>+223 76176669 / 66176669</span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
