feat: Design responsive complet et README détaillé
- Meta tags optimisés pour tous les appareils
- Design responsive avec breakpoints adaptatifs
- Images optimisées avec object-fit et ratios d'aspect
- Boutons touch-friendly avec taille minimale 44px
- Polices et espaces adaptatifs selon l'écran
- Navigation tactile optimisée pour mobile
- Performance améliorée avec font-smoothing
- README détaillé avec documentation complète
- Structure du projet et instructions d'installation
- Guide de personnalisation et dépannage
- Portfolio entièrement responsive et professionnel

--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+  <meta name="description" content="Portfolio professionnel de Sidiki Coulibaly - IT Support Analyst & IT Infrastructure Engineer. Expert en VMware, FortiGate, Active Directory et cybersécurité.">
+  <meta name="keywords" content="Sidiki Coulibaly, IT Support, Infrastructure, VMware, FortiGate, Active Directory, Cybersécurité, Mali, Bamako">
+  <meta name="author" content="Sidiki Coulibaly">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#00d4ff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Sidiki Portfolio">
   <title>Sidiki COULIBALY | IT Support Analyst | IT Infrastructure Engineer</title>
   
   <!-- Favicon Configuration -->
