--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
               </div>
               <div class="skill-item">
                 <div class="skill-header">
-                  <span class="skill-name">VMware</span>
-                  <span class="skill-percentage">90%</span>
+                  <span class="skill-name">IOS</span>
+                  <span class="skill-percentage">75%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" data-percentage="90"></div>
+                  <div class="skill-progress" data-percentage="75"></div>
                 </div>
               </div>
             </div>
@@ -317,6 +317,13 @@
               <span class="skill-tag">HMI</span>
               <span class="skill-tag">Backup Solutions</span>
               <span class="skill-tag">Security</span>
+              <span class="skill-tag">Github</span>
+              <span class="skill-tag">Nagios</span>
+              <span class="skill-tag">Prometheus</span>
+              <span class="skill-tag">Grafana</span>
+              <span class="skill-tag">Python</span>
+              <span class="skill-tag">Bash</span>
+              <span class="skill-tag">PowerShell</span>
             </div>
           </div>
         </div>
@@ -846,7 +853,7 @@
       <div class="project-section">
         <h3>Technologies Utilisées</h3>
         <div class="tech-used large">
-          <span>FortiGate 600E</span>
+          <span>FortiGate 100F</span>
           <span>FortiSandbox</span>
           <span>FortiAuthenticator</span>
           <span>NinjaOne</span>
