--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
               </div>
               <div class="contact-item">
                 <i class="fas fa-phone"></i>
-                <span>+223 76176669 / 66176669</span>
+                <span>+223 76176669|66176669</span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
@@ -729,7 +729,7 @@
             <div class="social-links">
               <a href="https://www.linkedin.com/in/sidiki-coulibaly-0814a0218" class="social-link"><i class="fab fa-linkedin"></i></a>
               <a href="https://github.com/SIDIKI01" class="social-link"><i class="fab fa-github"></i></a>
-              <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.reddit.com/u/sc-SysAdmin/s/aEiGisHXVX" class="social-link"><i class="fa-brands fa-reddit"></i></a>
               <a href="#" class="social-link"><i class="fas fa-rss"></i></a>
             </div>
           </div>
