--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
       <div class="project-section">
         <h3>Actions Clés</h3>
         <ul>
-          <li><strong>Déploiement :</strong> Cluster FortiGate 600E en HA (actif/passif)</li>
+          <li><strong>Déploiement :</strong> Cluster FortiGate 200F en HA (actif/passif)</li>
           <li><strong>Sécurité :</strong> Inspection SSL/TLS profonde pour analyser le trafic chiffré</li>
           <li><strong>Intégration :</strong> FortiSandbox pour analyse comportementale des fichiers</li>
           <li><strong>VPN SSL :</strong> Déploiement avec MFA via FortiAuthenticator</li>
