Refine project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
               <div class="timeline-content">
                 <h3>Formateur et Ingénieur IT</h3>
                 <h4>IMPACT DEV | Mali</h4>
-                <p>Ingénieur IT et Chef de projet pour digitaliser les postes de péage avec FER-MALI (Fonds d'Entreprise Routière) visant à supprimer les barrières physiques grâce à une reconnaissance de plaques par caméras intelligentes (LPR/ANPR), paiement d'impôts et matérialisation via une app dédiée, protection des transactions financières et données personnelles par chiffrement AES-256 et SHA-256 et garantir la continuité de service même avec des centres de péages distants.</p>
+                <p>Chef de projet pour la digitalisation des postes de péage avec FER-MALI (Fonds d'Entretien Routier) visant à supprimer les barrières physiques grâce à une reconnaissance de plaques par caméras intelligentes (LPR/ANPR), paiement d'impôts et matérialisation via une app dédiée, protection des transactions financières et données personnelles par chiffrement AES-256 et SHA-256 et garantir la continuité de service même avec des centres de péages distants.</p>
                 <ul>
-                  <li>Conception et Développement d'Applications Web des systèmes de Gestion des Postes de Péage</li>
-                  <li>Conçu et développé des modules de formation complets (manuels d'utilisation, tutoriels vidéo, présentations interactives) adaptés aux différents profils (agents de péage, techniciens de maintenance et superviseurs)</li>
+                  <li>Conception et Développement d'Applications Web des systèmes de Gestion pour les postes de Péage</li>
+                  <li>Conçu et développé des modules de formation complets (manuels d'utilisation, tutoriels vidéos, présentations interactives) adaptés aux différents profils (agents de péage, techniciens de maintenance et superviseurs)</li>
                   <li>Amélioration de la sécurité routière et environnementale et simplification de l'expérience utilisateur</li>
                   <li>Assuré le support technique de niveau 2 et 3 pour les utilisateurs et les infrastructures critiques.</li>
                 </ul>
@@ -369,7 +369,7 @@
               <div class="timeline-content">
                 <h3>Technicien support IT</h3>
                 <h4>Résolue Minning Company (SOMISY SA) | Mali</h4>
-                <p>Installation et câblage de réseaux Ethernet et fibre optique sur différents départements du site. Tests de performance et certification de liaisons fibre optique avec équipements spécialisés (OTDR, wattmètre).</p>
+                <p>Installation et câblage de réseaux Ethernet et fibre optique. Tests de performance et certification de liaisons fibre optique avec équipements spécialisés (OTDR, wattmètre).</p>
                 <ul>
                   <li>Surveillance de l'infrastructure IT via SolarWinds, Cisco Prime, Meraki, NinjaOne (latence, disponibilité, bande passante, alertes SNMP)</li>
                   <li>Suivi de l'état des sauvegardes et restaurations via Veeam Backup & Replication, vérification des jobs, état des rétentions et rapports détaillés sur les incidents et les vulnérabilités</li>
